# try-mutex

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs
tests/: tests.rs
tests/compile-fail/: guard.rs
