[package]
name = "try-mutex"
version = "0.2.0"
edition = "2018"
description = "Fast non-blocking mutex"
categories = ["concurrency"]
authors = ["Mike Pedersen <mike@mikepedersen.dk>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mpdn/try-mutex"

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.3.3"
static_assertions = "1.1.0"
