[package]
name = "try-mutex"
version = "0.4.2"
edition = "2018"
description = "Fast non-blocking mutex"
categories = ["concurrency", "no-std"]
authors = ["Mike Pedersen <mike@mikepedersen.dk>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mpdn/try-mutex"

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.3.4"
static_assertions = "1.1.0"
